test/sema/typeck/struct/unnamed-field-assignment-wrong-type.dora
struct Foo(Int, Bool)
fn f(mut x: Foo, v: Bool) {
    x.0 = v;
}
